--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
         </label>
         <label class="form__field">
           What are your favorite brand of cars?
-          <select name="cars" required multiple>
+          <select name="cars" multiple>
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
             <option value="Lada">Lada</option>
