--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
-        <label class="form__field">
+        <div class="form__field">
           Do you love cats?
           <label>
             <input 
@@ -101,7 +101,7 @@
             >
             No
           </label>
-        </label>
+        </div>
         <label class="form__field">
           What is your favorite color?
           <input 
